fix compile
Signed-off-by: PengFei Li <lpengfei2016@gmail.com>